reuse translations: providers

--- a/i18n/fr/docusaurus-plugin-content-docs/current/02.install/10.providers/05.registrar/gandi.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/02.install/10.providers/05.registrar/gandi.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_label: Gandi
-title: Obtaining an API key from Gandi
+title: Obtenir une clef API chez Gandi
 ---
 
 Cette page a pour but de vous guider dans l'obtention d'une clé API auprès de Gandi afin de configurer le mécanisme de configuration automatique des DNS de YunoHost.
