--- a/i18n/fr/docusaurus-plugin-content-docs/current/02.install/40.post_install/20.dns_config.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/02.install/40.post_install/20.dns_config.mdx
@@ -1,111 +1,115 @@
 ---
-title: DNS zone configuration
+title: Configuration de la zone DNS
 ---
 
-DNS (domain name system) is a system that converts human-readable addresses
-(domain names) into machine-understandable addresses (IP). For your server to be
-easily accessible by human beings, and for some services like mail to work
-properly, DNS must be configured.
+DNS (système de nom de domaine) est un élément essentiel d'Internet qui permet
+de convertir des adresses compréhensibles par les êtres humains (les noms de
+domaines) en adresses compréhensibles par la machine (les adresses IP). Pour que
+votre serveur soit facilement accessible par d'autres êtres humains, et pour
+que certains services comme le mail fonctionnent correctement, il est nécessaire
+de configurer la zone DNS de votre domaine.
 
-If you're using an [automatic domain](/administer/tutorials/domains/dns_nohost_me) provided by the YunoHost Project, the configuration should be
-performed automatically. If you're using your own domain name (e.g. bought via
-a registrar), you should manually configure your domain on your registrar's
-interface.
+Si vous utilisez un [domaine automatique](/administer/tutorials/domains/dns_nohost_me) fourni par le Projet YunoHost,
+la configuration devrait être faite automatiquement. Si vous utilisez votre propre nom de domaine
+(e.g. acheté chez un registrar), il vous faut configurer manuellement votre
+domaine via l'interface de votre registrar.
 
-## Recommended DNS configuration
+## Configuration DNS recommandée
 
-NB: Examples here use the placeholder `your.domain.tld`, you have to replace it with your real domain, such as `www.yunohost.org`.
+*NB : les exemples utilisent ici le texte `votre.domaine.tld`, à remplacer par votre propre domaine (par exemple `www.yunohost.org`).*
 
-YunoHost provides a recommended DNS configuration, available via:
+YunoHost fournit une configuration DNS recommandée, accessible via :
 
-- the webadmin, in Domain > your.domain.tld > DNS configuration;
-- or the command line, `yunohost domain dns-conf your.domain.tld`
+- la webadmin, dans Domaines > votre.domain.tld > Configuration DNS ;
+- ou la ligne de commande, `yunohost domain dns-conf votre.domaine.tld`
 
-For specific needs or specific setups, and if you know what you're doing, you
-might want or have to tweak these, or add additional ones (e.g. to handle
-subdomains).
+Pour certains besoins ou installations particulières, et si vous savez ce que
+vous faites, il vous faudra peut-être modifier cette recommandation ou ajouter
+d'autres enregistrements (e.g. pour gérer des sous-domaines).
 
-The recommended configuration typically looks like this:
+La configuration recommandée ressemble typiquement à :
 
 ```bash
 #
-# Basic ipv4/ipv6 records
+# Enregistrements IPv4/IPv6 basiques
 #
 @ 3600 IN A 111.222.33.44
 * 3600 IN A 111.222.33.44
 
-# (If your server is IPv6 capable, there are some AAAA records)
+# (Si votre serveur supporte l'IPv6, il a des enregistrements AAAA)
 @ 3600 IN AAAA 2222:444:8888:3333:bbbb:5555:3333:1111
 * 3600 IN AAAA 2222:444:8888:3333:bbbb:5555:3333:1111
 
 #
 # XMPP
 #
-_xmpp-client._tcp 3600 IN SRV 0 5 5222 your.domain.tld.
-_xmpp-server._tcp 3600 IN SRV 0 5 5269 your.domain.tld.
+_xmpp-client._tcp 3600 IN SRV 0 5 5222 votre.domaine.tld.
+_xmpp-server._tcp 3600 IN SRV 0 5 5269 votre.domaine.tld.
 muc 3600 IN CNAME @
 pubsub 3600 IN CNAME @
 vjud 3600 IN CNAME @
 xmpp-upload 3600 IN CNAME @
 
 #
-# Mail (MX, SPF, DKIM and DMARC)
+# Mail (MX, SPF, DKIM et DMARC)
 #
-@ 3600 IN MX 10 your.domain.tld.
+@ 3600 IN MX 10 votre.domaine.tld.
 @ 3600 IN TXT "v=spf1 a mx -all"
-mail._domainkey 3600 IN TXT "v=DKIM1; k=rsa; p=someHuuuuuuugeKey"
+mail._domainkey 3600 IN TXT "v=DKIM1; k=rsa; p=uneGrannnnndeClef"
 _dmarc 3600 IN TXT "v=DMARC1; p=none"
 ```
 
-Though it might be easier to understand it if displayed like this:
+Mais il est peut-être plus facile de la comprendre affichée de la façon
+suivante :
 
-| Type    | Name                   | Value                                                 |
-| :-----: | :--------------------: | :--------------------------------------------------:  |
-|  **A**  |   **@**                |  `111.222.333.444` (your IPv4)                        |
-|    A    |   *                    |  `111.222.333.444` (your IPv4)                        |
-|  AAAA   |   @                    |  `2222:444:8888:3333:bbbb:5555:3333:1111` (your IPv6) |
-|  AAAA   |   *                    |  `2222:444:8888:3333:bbbb:5555:3333:1111` (your IPv6) |
-| **SRV** | **_xmpp-client._tcp**  |  `0 5 5222 your.domain.tld.`                          |
-| **SRV** | **_xmpp-server._tcp**  |  `0 5 5269 your.domain.tld.`                          |
-|  CNAME  |   muc                  |  `@`                                                  |
-|  CNAME  |   pubsub               |  `@`                                                  |
-|  CNAME  |   vjud                 |  `@`                                                  |
-|  CNAME  |   xmpp-upload          |  `@`                                                  |
-| **MX**  | **@**                  |  `your.domain.tld.`     (and priority: 10)            |
-|   TXT   |   @                    |  `"v=spf1 a mx -all"`               |
-|   TXT   |  mail._domainkey       |  `"v=DKIM1; k=rsa; p=someHuuuuuuugeKey"`              |
-|   TXT   |  _dmarc                |  `"v=DMARC1; p=none"`                                 |
+| Type    | Nom                    | Valeur                                                 |
+| :-----: | :--------------------: | :----------------------------------------------------: |
+|  **A**  |   **@**                |  `111.222.333.444` (votre IPv4)                        |
+|    A    |   *                    |  `111.222.333.444` (votre IPv4)                        |
+|  AAAA   |   @                    |  `2222:444:8888:3333:bbbb:5555:3333:1111` (votre IPv6) |
+|  AAAA   |   *                    |  `2222:444:8888:3333:bbbb:5555:3333:1111` (votre IPv6) |
+| **SRV** | **_xmpp-client._tcp**  |  `0 5 5222 votre.domaine.tld.`                         |
+| **SRV** | **_xmpp-server._tcp**  |  `0 5 5269 votre.domaine.tld.`                         |
+|  CNAME  |   muc                  |  `@`                                                   |
+|  CNAME  |   pubsub               |  `@`                                                   |
+|  CNAME  |   vjud                 |  `@`                                                   |
+|  CNAME  |   xmpp-upload          |  `@`                                                   |
+| **MX**  | **@**                  |  `votre.domaine.tld.`     (et priorité: 10)            |
+|   TXT   |   @                    |  `"v=spf1 a mx -all"`                |
+|   TXT   |  mail._domainkey       |  `"v=DKIM1; k=rsa; p=uneGrannnndeClef"`                |
+|   TXT   |  _dmarc                |  `"v=DMARC1; p=none"`                                  |
 
-### A few notes about this table
+### Quelques notes à propos de cette table
 
-- Not all these lines are absolutely necessary. For a minimal setup, you only need the records in bold.
-- The dot at the end of `your.domain.tld.` is important ;);
-- `@` corresponds to `your.domain.tld`, and e.g. `muc` corresponds to `muc.your.domain.tld`;
-- These are example values ! See your generated conf for the actual values you should use;
-- We recommend a [TTL](https://en.wikipedia.org/wiki/Time_to_live#DNS_records) of 3600 (1 hour). But you can use something else if you know what you're doing;
-- Don't put an IPv6 record if you're not sure IPv6 really works on your server! You might have issues with Let's Encrypt if it doesn't.
-- If you're using the domain provider Namecheap the SRV DNS entries are formatted as **Service**: `_xmpp-client` **Protocol**: `_tcp` **Priority**: `0` **Weight**: `5` **Port**: `5222` **Target**: `your.domain.tld`
+- Tous ces enregistrements ne sont pas nécessaires. Pour une installation minimale, seuls les enregistrements en gras sont nécessaires ;
+- Le point à la fin de `votre.domaine.tld.` est important ;) ;
+- `@` correspond à `votre.domaine.tld`, et par ex. `muc` correspond à `muc.votre.domaine.tld` ;
+- Les valeurs montrées ici sont des valeurs d'exemple ! Référez-vous à la configuration générée chez vous pour savoir quelles valeurs utiliser ;
+- Nous recommandons un [TTL](https://fr.wikipedia.org/wiki/Time_to_Live#Le_Time_to_Live_dans_le_DNS) de 3600 (1 heure). Mais vous pouvez utiliser une autre valeur si vous savez ce que vous faîtes ;
+- Ne mettez pas d'enregistrement IPv6 si vous n'êtes pas certain que l'IPv6 fonctionne sur votre serveur ! Vous aurez des problèmes avec Let's Encrypt si ce n'est pas le cas.
+- Si vous utilisez le registrar Namecheap, les entrées SRV sont formattées comme **Service**: `_xmpp-client` **Protocol**: `_tcp` **Priority**: `0` **Weight**: `5` **Port**: `5222` **Target**: `votre.domaine.tld`
 
-### Reverse DNS
+### Résolution DNS inverse
 
-If your ISP or VPS provider let you define a [Reverse DNS
-lookup](https://en.wikipedia.org/wiki/Reverse_DNS_lookup) for your public IPv4
-and/or IPv6 addresses, you must configure it. It will prevent you to be marked as
-spam by anti-spam filters.
+Si votre opérateur ou votre hébergeur le permet, nous vous encourageons à
+configurer une [résolution DNS
+inverse](https://fr.wikipedia.org/wiki/Domain_Name_System#R%C3%A9solution_inverse)
+pour vos adresses publiques IPv4 et/ou IPv6. Ceci vous évitera d'être marqué
+comme spammeur par les systèmes de filtrage anti-spams.
 
-**N.B.: the reverse DNS configuration happens on your Internet Service Provider or VPS provider. It is *not* handled by your domain's registrar.**
+**N.B. : la configuration du DNS inverse se passe au niveau de votre fournisseur d'accès à Internet, ou de votre hébergeur de VPS. Elle ne se fait *pas* sur le registrar de votre nom de domaine.**
 
-If your public IPv4 address is `111.222.333.444` and your DNS
-domain is `domain.tld`, you should get following answer when using `nslookup`
-command tool:
+Cela signifie que si votre adresse IPv4 publique est `111.222.333.444` et que
+votre nom de domaine est `domain.tld`, vous devez obtenir le résultat suivant
+en utilisant la commande `nslookup` :
 
 ```bash
 nslookup 111.222.333.444
 444.333.222.111.in-addr.arpa    name = domain.tld.
 ```
 
-The diagnosis system available in the webadmin performs this checks automatically (in section Email).
+Le système de diagnostic présent dans l'interface d'administration fait cette vérification automatiquement (dans la section Email)
 
-### Dynamic IP
+### IP Dynamique
 
-If your global IP address is constantly changing, follow this [tutorial](/administer/tutorials/domains/dns_dynamicip).
+Si votre adresse IP publique change constamment, suivez ce [tutoriel](/administer/tutorials/domains/dns_dynamicip).
