--- a/i18n/de/docusaurus-plugin-content-docs/current/02.install/40.post_install/20.dns_config.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/02.install/40.post_install/20.dns_config.mdx
@@ -1,111 +1,110 @@
 ---
-title: DNS zone configuration
+title: Konfiguration der DNS-Zone
 ---
 
-DNS (domain name system) is a system that converts human-readable addresses
-(domain names) into machine-understandable addresses (IP). For your server to be
-easily accessible by human beings, and for some services like mail to work
-properly, DNS must be configured.
+Das Domain Name System (DNS) ist einer der wichtigsten Dienste in vielen IP-basierten Netzwerken.
+Hauptsächlich wird das DNS zur Umsetzung von Domainnamen in IP-Adressen benutzt. Das DNS bietet somit eine Vereinfachung, weil Menschen sich Namen weitaus besser merken können als Zahlenketten. Damit
+Ihr Server für andere leicht erreichbar ist und bestimmte Dienste, wie z. B. E-Mail, richtig funktionieren, ist es notwendig, die DNS-Zone Ihrer Domain zu konfigurieren.
 
-If you're using an [automatic domain](/administer/tutorials/domains/dns_nohost_me) provided by the YunoHost Project, the configuration should be
-performed automatically. If you're using your own domain name (e.g. bought via
-a registrar), you should manually configure your domain on your registrar's
-interface.
+Wenn Sie eine [automatische Domain](/administer/tutorials/domains/dns_nohost_me) verwenden, die vom YunoHost-Projekt bereitgestellt wird,
+sollte die Konfiguration automatisch erfolgen. Wenn Sie Ihren eigenen Domainname
+(z. B. von einem Registrar erworben), müssen Sie manuell Ihre
+Domain über die Schnittstelle Ihres Registrars konfigurieren.
 
-## Recommended DNS configuration
+## Empfohlene DNS-Konfiguration
 
-NB: Examples here use the placeholder `your.domain.tld`, you have to replace it with your real domain, such as `www.yunohost.org`.
+*N.B. : Die Beispiele hier verwenden den Text: `your.domain.tld`, der durch Ihre eigene Domain (z. B.`www.yunohost.org`) zu ersetzen ist.*
 
-YunoHost provides a recommended DNS configuration, available via:
+YunoHost bietet eine empfohlene DNS-Konfiguration, die auf zwei Arten zugänglich ist :
 
-- the webadmin, in Domain > your.domain.tld > DNS configuration;
-- or the command line, `yunohost domain dns-conf your.domain.tld`
+- mit dem Webadmin, unter Domänen > your.domain.tld > DNS-Konfiguration ;
+- oder auf der Kommandozeile  `yunohost domain dns-conf your.domain.tld`
 
-For specific needs or specific setups, and if you know what you're doing, you
-might want or have to tweak these, or add additional ones (e.g. to handle
-subdomains).
+Für einige spezielle Anforderungen oder Installationen und wenn Sie wissen,
+was Sie tun, müssen Sie diese Empfehlung möglicherweise ändern oder
+andere Datensätze hinzufügen (z. B. zur Behandlung von Subdomains).
 
-The recommended configuration typically looks like this:
+Die empfohlene Konfiguration sieht typischerweise so aus:
 
 ```bash
 #
-# Basic ipv4/ipv6 records
+# Basis IPv4/IPv6 Einträge
 #
 @ 3600 IN A 111.222.33.44
 * 3600 IN A 111.222.33.44
 
-# (If your server is IPv6 capable, there are some AAAA records)
+# (Si votre serveur supporte l'IPv6, il a des enregistrements AAAA)
 @ 3600 IN AAAA 2222:444:8888:3333:bbbb:5555:3333:1111
 * 3600 IN AAAA 2222:444:8888:3333:bbbb:5555:3333:1111
 
 #
 # XMPP
 #
-_xmpp-client._tcp 3600 IN SRV 0 5 5222 your.domain.tld.
-_xmpp-server._tcp 3600 IN SRV 0 5 5269 your.domain.tld.
+_xmpp-client._tcp 3600 IN SRV 0 5 5222 votre.domaine.tld.
+_xmpp-server._tcp 3600 IN SRV 0 5 5269 votre.domaine.tld.
 muc 3600 IN CNAME @
 pubsub 3600 IN CNAME @
 vjud 3600 IN CNAME @
 xmpp-upload 3600 IN CNAME @
 
 #
-# Mail (MX, SPF, DKIM and DMARC)
+# Mail (MX, SPF, DKIM et DMARC)
 #
-@ 3600 IN MX 10 your.domain.tld.
-@ 3600 IN TXT "v=spf1 a mx -all"
-mail._domainkey 3600 IN TXT "v=DKIM1; k=rsa; p=someHuuuuuuugeKey"
+@ 3600 IN MX 10 votre.domaine.tld.
+@ 3600 IN TXT "v=spf1 a mx ip4:111.222.33.44 -all"
+mail._domainkey 3600 IN TXT "v=DKIM1; k=rsa; p=uneGrannnnndeClef"
 _dmarc 3600 IN TXT "v=DMARC1; p=none"
 ```
 
-Though it might be easier to understand it if displayed like this:
+Aber es ist vielleicht leichter zu verstehen, wenn es auf folgende Weise
+dargestellt wird:
 
-| Type    | Name                   | Value                                                 |
-| :-----: | :--------------------: | :--------------------------------------------------:  |
-|  **A**  |   **@**                |  `111.222.333.444` (your IPv4)                        |
-|    A    |   *                    |  `111.222.333.444` (your IPv4)                        |
-|  AAAA   |   @                    |  `2222:444:8888:3333:bbbb:5555:3333:1111` (your IPv6) |
-|  AAAA   |   *                    |  `2222:444:8888:3333:bbbb:5555:3333:1111` (your IPv6) |
-| **SRV** | **_xmpp-client._tcp**  |  `0 5 5222 your.domain.tld.`                          |
-| **SRV** | **_xmpp-server._tcp**  |  `0 5 5269 your.domain.tld.`                          |
-|  CNAME  |   muc                  |  `@`                                                  |
-|  CNAME  |   pubsub               |  `@`                                                  |
-|  CNAME  |   vjud                 |  `@`                                                  |
-|  CNAME  |   xmpp-upload          |  `@`                                                  |
-| **MX**  | **@**                  |  `your.domain.tld.`     (and priority: 10)            |
-|   TXT   |   @                    |  `"v=spf1 a mx -all"`               |
-|   TXT   |  mail._domainkey       |  `"v=DKIM1; k=rsa; p=someHuuuuuuugeKey"`              |
-|   TXT   |  _dmarc                |  `"v=DMARC1; p=none"`                                 |
+| Typ     | Name                   | Wert                                                   |
+| :-----: | :--------------------: | :----------------------------------------------------: |
+|  **A**  |   **@**                |  `111.222.333.444` (deine IPv4)                        |
+|    A    |   *                    |  `111.222.333.444` (deine IPv4)                        |
+|  AAAA   |   @                    |  `2222:444:8888:3333:bbbb:5555:3333:1111` (deine IPv6) |
+|  AAAA   |   *                    |  `2222:444:8888:3333:bbbb:5555:3333:1111` (deine IPv6) |
+| **SRV** | **_xmpp-client._tcp**  |  `0 5 5222 deine.domaine.tld.`                         |
+| **SRV** | **_xmpp-server._tcp**  |  `0 5 5269 deine.domaine.tld.`                         |
+|  CNAME  |   muc                  |  `@`                                                   |
+|  CNAME  |   pubsub               |  `@`                                                   |
+|  CNAME  |   vjud                 |  `@`                                                   |
+|  CNAME  |   xmpp-upload          |  `@`                                                   |
+| **MX**  | **@**                  |  `deine.domaine.tld.`     (und prioriät: 10)           |
+|   TXT   |   @                    |  `"v=spf1 a mx ip4:111.222.33.44 -all"`                |
+|   TXT   |  mail._domainkey       |  `"v=DKIM1; k=rsa; p=irgendeingrooßerSchlüssel"`       |
+|   TXT   |  _dmarc                |  `"v=DMARC1; p=none"`                                  |
 
-### A few notes about this table
+### Einige Hinweise zu dieser Tabelle
 
-- Not all these lines are absolutely necessary. For a minimal setup, you only need the records in bold.
-- The dot at the end of `your.domain.tld.` is important ;);
-- `@` corresponds to `your.domain.tld`, and e.g. `muc` corresponds to `muc.your.domain.tld`;
-- These are example values ! See your generated conf for the actual values you should use;
-- We recommend a [TTL](https://en.wikipedia.org/wiki/Time_to_live#DNS_records) of 3600 (1 hour). But you can use something else if you know what you're doing;
-- Don't put an IPv6 record if you're not sure IPv6 really works on your server! You might have issues with Let's Encrypt if it doesn't.
-- If you're using the domain provider Namecheap the SRV DNS entries are formatted as **Service**: `_xmpp-client` **Protocol**: `_tcp` **Priority**: `0` **Weight**: `5` **Port**: `5222` **Target**: `your.domain.tld`
+- Nicht alle dieser Aufzeichnungen sind notwendig. Für eine Minimalinstallation werden nur die fett gedruckten Datensätze benötigt;
+- Der Punkt am Ende `your.domain.tld.` ist wichtig ;) ;
+- `@` entspricht `your.domain.tld`, und z. B.. `muc` entspricht `muc.your.domain.tld`;
+- Die hier gezeigten Werte sind nur Beispiele! Beziehen Sie sich auf die generierte Konfiguration, um herauszufinden, welche Werte zu verwenden sind;
+- Wir empfehlen eine [TTL](https://de.wikipedia.org/wiki/Time_to_Live#Domain_Name_System) von 3600 (1 Stunde). Es ist aber auch möglich einen anderen Wert zu verwenden, wenn Sie wissen, was Sie tun;
+- Legen Sie keinen IPv6-Eintrag an, wenn Sie nicht sicher sind, daß IPv6 auf Ihrem Server funktioniert! Sie werden Probleme mit Let's Encrypt haben, wenn dies nicht der Fall ist.
+- Wenn Sie den Provider "Namecheap" benutzen, werden die SRV DNS Einträge wie folgt formatiert: **Service**: `_xmpp-client` **Protocol**: `_tcp` **Priority**: `0` **Weight**: `5` **Port**: `5222` **Target**: `your.domain.tld`
 
 ### Reverse DNS
 
-If your ISP or VPS provider let you define a [Reverse DNS
-lookup](https://en.wikipedia.org/wiki/Reverse_DNS_lookup) for your public IPv4
-and/or IPv6 addresses, you must configure it. It will prevent you to be marked as
-spam by anti-spam filters.
+Wenn Ihr ISP oder Host dies zulässt, empfehlen wir Ihnen, eine
+ [Reverse-DNS-Konfiguration](https://de.wikipedia.org/wiki/Reverse_DNS)
+für Ihre öffentlichen IPv4- und/oder IPv6-Adressen. Dadurch wird verhindert, dass Sie als Spammer von den Anti-Spam-Filtersystemen markiert werden.
 
-**N.B.: the reverse DNS configuration happens on your Internet Service Provider or VPS provider. It is *not* handled by your domain's registrar.**
+**N.B. : Die Reverse-DNS-Konfiguration erfolgt bei Ihrem Internet Service Provider bzw. VPS-Host. Es betrifft *nicht* den Registrar Ihres Domainnamens.**
 
-If your public IPv4 address is `111.222.333.444` and your DNS
-domain is `domain.tld`, you should get following answer when using `nslookup`
-command tool:
+Das heißt, wenn Ihre öffentliche IPv4-Adresse `111.222.333.444` ist und Ihr
+Domänename `domain.tld` ist, sollten Sie mit dem Befehl
+`nslookup` das folgende Ergebnis erhalten :
 
 ```bash
 nslookup 111.222.333.444
 444.333.222.111.in-addr.arpa    name = domain.tld.
 ```
 
-The diagnosis system available in the webadmin performs this checks automatically (in section Email).
+Das Diagnosesystem in der Administrationsoberfläche tut dies automatisch (im Abschnitt E-Mail)
 
-### Dynamic IP
+### Dynamische IP
 
-If your global IP address is constantly changing, follow this [tutorial](/administer/tutorials/domains/dns_dynamicip).
+Wenn sich Ihre öffentliche IP-Adresse ständig ändert, befolgen Sie dieses [Tutorial](/administer/tutorials/domains/dns_dynamicip).
