--- a/i18n/it/docusaurus-plugin-content-docs/current/02.install/10.providers/05.registrar/gandi.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/02.install/10.providers/05.registrar/gandi.mdx
@@ -1,16 +1,17 @@
 ---
 sidebar_label: Gandi
-title: Obtaining an API key from Gandi
+title: Ottenere una chiave API con Gandi
 ---
 
-This page is meant to guide you in obtaining an API key from Gandi in order to configure YunoHost's automatic DNS configuration mecanism
+
+Questa pagina indica come ottenere una chiave API con Gandi di modo da configurare il meccanismo di configurazione automatica del DNS di YunoHost.
 
 :::caution
-**DO NOT share your API tokens with anybody!** A malicious attacker obtaining your tokens could take over your domain, and possibly your server!
+**NON comunicare a nessuno il token API!** Un attaccante malizioso con il tuo token potrebbe prendere il controllo del tuo dominio e quindi anche del tuo server!
 :::
 
-1. Go to [https://account.gandi.net/](https://account.gandi.net/)
-2. You should land on this page. Then click on 'Security'
+1. Connettiti a <https://account.gandi.net/>
+2. Dovresti vedere questa pagina e quindi clicca su 'Security'
   ![](/img/registrar_api_gandi_1.png)
-3. In the next page, click on '(re)Generate the API key'.
+3. Nella pagina successiva clicca su '(re)Generate the API key'.
   ![](/img/registrar_api_gandi_2.png)
