--- a/i18n/es/docusaurus-plugin-content-docs/current/02.install/40.post_install/15.isp_box_config.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/02.install/40.post_install/15.isp_box_config.mdx
@@ -20,7 +20,7 @@ Una vez que tienes la redirección configurada, deberías poder comprobar que lo
 
 ### 1. Acceder a la interfaz de administración de tu router/caja/box
 
-En general la interfaz de administración está accesible desde <http://192.168.0.1> o <http://192.168.1.1>.
+En general la interfaz de administración está accesible desde [http://192.168.0.1](http://192.168.0.1) o [http://192.168.1.1](http://192.168.1.1).
 Luego, es posible que tengas que autenticarte con los ID provechos pour tu proveedor de acceso a Internet.
 
 ### 2. Descubrir la IP local del servidor
