--- a/i18n/it/docusaurus-plugin-content-docs/current/02.install/10.providers/05.registrar/gandi.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/02.install/10.providers/05.registrar/gandi.mdx
@@ -10,7 +10,7 @@ Questa pagina indica come ottenere una chiave API con Gandi di modo da configura
 **NON comunicare a nessuno il token API!** Un attaccante malizioso con il tuo token potrebbe prendere il controllo del tuo dominio e quindi anche del tuo server!
 :::
 
-1. Connettiti a <https://account.gandi.net/>
+1. Connettiti a [https://account.gandi.net/](https://account.gandi.net/)
 2. Dovresti vedere questa pagina e quindi clicca su 'Security'
   ![](/img/registrar_api_gandi_1.png)
 3. Nella pagina successiva clicca su '(re)Generate the API key'.
