--- a/i18n/it/docusaurus-plugin-content-docs/current/02.install/10.providers/05.registrar/index.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/02.install/10.providers/05.registrar/index.mdx
@@ -12,8 +12,9 @@ Non sono supportati tutti i registrar. Fino ad ora la comunità ha testato e val
 
 Questa lista può aiutarti a scegliere un registrar se conti di acquistare un nome a dominio da usare con YunoHost.
 
-| Registrar | Compatibilità | Facilità per ottenere una chiave API | Howto |
-| --------- | ------------- | ------------------ |
-| [Gandi](https://www.gandi.net)     | ✔ (testato)    | ✔ |  [Obtain an API key](/providers/registrar/gandi/autodns)                |
-| [OVH](https://www.ovh.com/domaines/)       | ✔ (testato)    | ✘ | [Obtain an API key](/providers/registrar/ovh/autodns) <br> [Configure manually](/providers/registrar/ovh/manualdns) |
-| [Namecheap](https://www.namecheap.com/) | ✘ (in lexicon ma non testato)    | ✘✘✘ API non disponibile senza 50$ nell'account  | |
+| Registrar                           | Compatibilità               | Facilità per ottenere una chiave API | Howto |
+|-------------------------------------|-----------------------------|---------------------------|-------|
+| [Gandi](https://www.gandi.net)      | ✘ (broken)                  | ✘   | [Obtain an API key](/install/providers/registrar/gandi) <br/> [See bug here](https://github.com/YunoHost/issues/issues/2419) |
+| [OVH](https://ovh.com/domaines)     | ✔ (testato)                  | ✘   | [Obtain an API key](/install/providers/registrar/ovh/autodns) <br/> [Configure manually](/install/providers/registrar/ovh/manualdns) |
+| [Namecheap](https://namecheap.com)  | ✘ (in lexicon ma non testato) | ✘✘✘ API not available without 50$ on the account | [Obtain an API key](/install/providers/registrar/namecheap) |
+
