yarn write-translations

--- a/i18n/ar/docusaurus-plugin-content-docs/current.json
+++ b/i18n/ar/docusaurus-plugin-content-docs/current.json
@@ -162,5 +162,9 @@
   "sidebar.docsSidebar.link.Forum": {
     "message": "Forum",
     "description": "The label for link Forum in sidebar docsSidebar, linking to https://forum.yunohost.org"
+  },
+  "sidebar.docsSidebar.category.Install on...": {
+    "message": "Install on...",
+    "description": "The label for category Install on... in sidebar docsSidebar"
   }
 }
